force-app/main/default/objects/HAER_Voxel_Model__c/HAER_Voxel_Model__c.object-meta.xml
<CustomObject>
    <description>3D Model consisting of voxels</description>
    <label>Voxel Model</label>
    <nameField>
        <label>Voxel Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voxel Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>