force-app/main/default/objects/HAER_Voxel_Model__c/fields/HAER_Data__c.field-meta.xml
<CustomField>
    <fullName>HAER_Data__c</fullName>
    <description>JSON String containing the model voxels data</description>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>