force-app/main/default/objects/HAER_Voxel_Model__c/fields/HAER_Data_File_Id__c.field-meta.xml
<CustomField>
    <fullName>HAER_Data_File_Id__c</fullName>
    <description>Id of the content verion containing the voxel data of the model</description>
    <label>Data File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>