force-app/main/default/objects/HAER_Voxel_Model__c/fields/HAER_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>HAER_Thumbnail__c</fullName>
    <description>Base 64 string of a jpeg thumbnail of the model</description>
    <label>Thumbnail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>