force-app/main/default/objects/HAER_Voxel_Model__c/fields/HAER_Thumbnail_File_Id__c.field-meta.xml
<CustomField>
    <fullName>HAER_Thumbnail_File_Id__c</fullName>
    <description>Id of the content version ID containing the actual thumbnail of the model</description>
    <label>Thumbnail File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>